# docs/swagger.json
@@ -23,7 +23,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "标签状态, 0:禁用  1:启用  2:全部",
+                        "description": "标签状态, 0:全部  1:启用  2:禁用",
                         "name": "state",
                         "in": "query"
                     },
@@ -100,6 +100,41 @@
             }
         },
         "/api/v1/tags/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "获取单个标签",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "标签id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/model.Tag"
+                        }
+                    },
+                    "400": {
+                        "description": "请求错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "内部服务错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    }
+                }
+            },
             "put": {
                 "produces": [
                     "application/json"
@@ -116,7 +151,7 @@
                         }
                     },
                     {
-                        "description": "标签状态, 0:禁用  1:启用",
+                        "description": "标签状态, 1:启用  2:禁用",
                         "name": "state",
                         "in": "body",
                         "required": true,
@@ -160,6 +195,15 @@
                     "application/json"
                 ],
                 "summary": "删除标签",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Tag ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "成功",
